small spacing fix in course page

--- a/public/css/course.css
+++ b/public/css/course.css
@@ -328,7 +328,7 @@ body {
     font-size: 40px;
     /* identical to box height */
     color: #111111;
-    padding: 0 0 1em 0;
+    padding: 1em 0;    
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
